--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,101 +2,93 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/lightGray">
 
-    <Button
-        android:id="@+id/playClassicButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/play_classic"
-        android:background="@color/darkBlue"
-        android:textColor="@color/white"
-        android:padding="10dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/classicLogoImageView" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/playClassicButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/play_classic"
+            android:background="@color/darkBlue"
+            android:textColor="@color/white"
+            android:padding="10dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/classicLogoImageView"/>
 
-    <Button
-        android:id="@+id/playRewindButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
-        android:background="@color/darkGreen"
-        android:padding="10dp"
-        android:text="@string/play_rewind"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/surpriseLogoImageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/playRewindButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:background="@color/darkGreen"
+            android:padding="10dp"
+            android:text="@string/play_rewind"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/rewindLogoImageView"/>
 
-    <Button
-        android:id="@+id/playSurpriseButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
-        android:text="@string/play_surprise"
-        android:background="@color/darkRed"
-        android:textColor="@color/white"
-        android:padding="10dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/playSurpriseButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/play_surprise"
+            android:background="@color/darkRed"
+            android:textColor="@color/white"
+            android:padding="10dp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/surpriseLogoImageView"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
-        android:text="@string/main_text"
-        android:textColor="@color/black"
-        android:textSize="20dp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:text="@string/main_text"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:gravity="center_horizontal"
+            android:layout_centerHorizontal="true" />
 
-    <ImageView
-        android:id="@+id/rewindLogoImageView"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
-        android:contentDescription="@string/light_show_classic_logo"
-        app:layout_constraintBottom_toTopOf="@+id/playRewindButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playClassicButton"
-        app:srcCompat="@drawable/rewind_logo" />
+        <ImageView
+            android:id="@+id/rewindLogoImageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="25dp"
+             android:contentDescription="@string/ls_classic_logo"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/playClassicButton"
+            app:srcCompat="@drawable/rewind_logo" />
 
-    <ImageView
-        android:id="@+id/surpriseLogoImageView"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="25dp"
-        android:contentDescription="@string/light_show_surprise_logo"
-        app:layout_constraintBottom_toTopOf="@+id/playSurpriseButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/surprise_logo" />
+        <ImageView
+            android:id="@+id/surpriseLogoImageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="25dp"
+            android:contentDescription="@string/ls_surprise_logo"
+            android:layout_below="@id/playRewindButton"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/surprise_logo"/>
 
-    <ImageView
-        android:id="@+id/classicLogoImageView"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="25dp"
-        android:contentDescription="@string/light_show_rewind_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@drawable/classic_logo" />
+        <ImageView
+            android:id="@+id/classicLogoImageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginTop="25dp"
+            android:contentDescription="@string/ls_rewind_logo"
+            android:layout_below="@id/textView"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/classic_logo" />
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
