--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
         <Button
             android:id="@+id/playClassicButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:onClick="onClick"
             android:text="@string/play_classic"
             android:background="@color/darkBlue"
             android:textColor="@color/white"
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:onClick="onClick"
             android:background="@color/darkGreen"
             android:padding="10dp"
             android:text="@string/play_rewind"
@@ -41,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
+            android:onClick="onClick"
             android:text="@string/play_surprise"
             android:background="@color/darkRed"
             android:textColor="@color/white"
