--- a/app/src/main/res/layout/game_board.xml
+++ b/app/src/main/res/layout/game_board.xml
@@ -6,17 +6,44 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/playerScoreTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/score"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
+        app:layout_constraintEnd_toStartOf="@+id/vertical33"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/highScoreButton"
+        android:layout_width="115dp"
+        android:layout_height="wrap_content"
+        android:background="@color/darkRed"
+        android:padding="10dp"
+        android:text="@string/high_score"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/vertical33"
+        app:layout_constraintTop_toTopOf="@+id/horizontal95" />
+
     <Button
         android:id="@+id/mainMenuButton"
         android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:onClick="mainMenu"
         android:background="@color/darkRed"
         android:padding="10dp"
         android:text="@string/main_menu"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/vertical33"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/horizontal95" />
 
@@ -25,7 +52,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
-        android:background="@color/darkBlue"
+        android:background="@drawable/bottomrightbutton"
         app:layout_constraintBottom_toTopOf="@+id/horizontal95"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
@@ -37,7 +64,7 @@
         android:layout_height="150dp"
 
         android:layout_marginEnd="10dp"
-        android:background="@color/darkYellow"
+        android:background="@drawable/bottomleftbutton"
         app:layout_constraintBottom_toTopOf="@+id/horizontal95"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +75,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginStart="10dp"
-        android:background="@color/darkRed"
+        android:background="@drawable/toprightbutton"
         app:layout_constraintBottom_toTopOf="@+id/horizontal50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vertical33"
@@ -73,19 +100,20 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginEnd="10dp"
-        android:background="@color/darkGreen"
+        android:background="@drawable/topleftbutton"
         app:layout_constraintBottom_toTopOf="@+id/horizontal50"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontal25" />
+        app:layout_constraintTop_toTopOf="@+id/horizontal25"
+        app:layout_constraintVertical_bias="0.507" />
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/ls_masters_logo"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal25"
+        app:layout_constraintBottom_toTopOf="@+id/topScoreTV"
         app:layout_constraintEnd_toStartOf="@+id/vertical33"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -139,4 +167,30 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.50" />
+
+    <TextView
+        android:id="@+id/topScoreTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/top_score"
+        app:layout_constraintBottom_toTopOf="@+id/playerScoreTV"
+        app:layout_constraintEnd_toStartOf="@+id/vertical33"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/messageTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/game_over"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal95"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/horizontal25"
+        app:layout_constraintVertical_bias="0.502" />
 </androidx.constraintlayout.widget.ConstraintLayout>
