Game now reads/writes high scores. Game can now be reset by clicking play again.

--- a/app/src/main/res/layout/high_score.xml
+++ b/app/src/main/res/layout/high_score.xml
@@ -32,7 +32,7 @@
         app:layout_constraintGuide_begin="205dp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/mainMenuHighScores"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_menu"
